@@ -29,7 +29,7 @@ tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(25)
     }
 }
 
@@ -159,7 +159,7 @@ dependencies {
 test {
     useJUnitPlatform()
 
-    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--enable-native-access', 'ALL-UNNAMED,jcef'
 
     // default max heap is VM RAM / 4, which may be too low on low RAM VMs
     maxHeapSize = "4096m"
@@ -193,7 +193,7 @@ javadoc {
 tasks.register('runMCreator', JavaExec.class) {
     dependsOn jar
 
-    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+    jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--enable-native-access', 'ALL-UNNAMED,jcef'
 
     classpath += sourceSets.main.runtimeClasspath
 
