@@ -6,7 +6,7 @@ launch4j {
     dontWrapJar = false
     copyConfigurable = []
     classpath = ["./lib/*"]
-    jvmOptions = ["--add-opens=java.base/java.lang=ALL-UNNAMED"]
+    jvmOptions = ["--add-opens=java.base/java.lang=ALL-UNNAMED", "--enable-native-access=ALL-UNNAMED,jcef"]
     libraryDir = "null"
     stayAlive = true
 
@@ -50,7 +50,7 @@ tasks.register('exportWin64', Copy.class) {
     }
     into('plugins') { from 'build/plugins/' }
     into('license') { from 'license' }
-    into('jdk') { from 'jdk/jbr21_win_64' }
+    into('jdk') { from 'jdk/jbr25_win_64' }
 
     doLast {
         signFile(file('build/export/win64/mcreator.exe'))
